--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://josez1984.github.io/react-homework",
+  "homepage": "https://josez1984.github.io/react-homework/",
   "name": "react-homework",
   "version": "0.1.0",
   "private": true,
